2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Don't pulse the podcasts source when feeds are changes, just when items
	are added.

	* src/Libraries/Migo/Migo.Syndication/FeedUpdateTask.cs: If the feed
	hasn't been updated since we last checked, pass notify=false to feed.Save.

	* src/Libraries/Migo/Migo.Syndication/Feed.cs: Don't raise FeedsChanged
	when DownloadStatus set, just in Save and Delete.  Add override to Save
	that takes bool notify arg.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Don't throw
	an exception when CopyTo isn't implemented, but log a warning.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlist/AbstractPlaylistSource.cs:
	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: Move the
	NeedsReload methods into DatabaseSource so they can be used by
	PrimarySource and others.

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Only reload
	when track(s) change if needed, otherwise just invalidate the cache.
	Should help some with performance/CPU usage when changing songs.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs: Fix crasher
	in save-selection by being properly defensive and not assuming the item
	pointed to by the selection focus is still in the model.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
	Fix bug where if the play queue was empty but you double clicked on it, it
	would go recursive/eat all your RAM.  Should fix BGO #535369.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Add a bool
	IsLocal property.  If it's false and you drag tracks to a LibrarySource,